# DoubleHelix

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  _pyproject.toml  main.spec  pyproject.toml  requirements.txt  setup.py
.github/: auto-assign.yml
.github/ISSUE_TEMPLATE/: add-a-new-reference.md
.github/workflows/: python-app.yml  python-build-lint.yml  python-publish-test.yml  python-publish.yml  python-pyinstaller-linux.yml  python-pyinstaller-win.yml  python-pyinstaller.yml
docs/: basic-usage.md  conf.py  index.rst  reference-genome.md  requirements.in  requirements.txt  wgse-library.md
helix/: __init__.py  configuration.py  converter.py  main.py
helix/adapters/: alignment_map_file_info_adapter.py  alignment_stats_adapter.py  coverage_stats_adapter.py  genome_adapter.py  header_adapter.py  index_stats_adapter.py  reference_adapter.py  search.py
helix/alignment_map/: alignment_map_file.py  alignment_map_header.py  alignment_stats_calculator.py  coverage_stats_calculator.py  depth_analyzer.py  index_stats_calculator.py  variant_caller.py
helix/data/: alignment_stats.py  build.py  coverage_stats.py  extract_target_format.py  gender.py  genome.py  mitochondrial_model.py  sequence.py  source.py  tabular_data.py
helix/data/alignment_map/: alignment_map_file_info.py  alignment_map_header_metadata.py  alignment_map_header_sequence.py
helix/fasta/: fasta_letter_counter.py  fasta_stats_files.py  letter_run_buckets.py  letter_run_collection.py
helix/fastq/: fastq_file.py
helix/files/: bgzip.py  decompressor.py  downloader.py  file_type_checker.py  gzip.py
helix/gui/: WGSE-NG.pyproject  __init__.py  form.ui  main.py  resources.qrc  table_dialog.py  ui_form.py
helix/gui/extract/: extract_wizard.py  format_selection.py  microarray_selection.py
helix/metadata/: mtdna.json  ploidy.txt  sequencers.json  sources.json
helix/metadata/report_templates/: table_simple.html  table_tab.html
helix/microarray/: microarray_converter.py  microarray_generator.py  microarray_line_formatter.py  raw_file.py  templates_importer.py
helix/mtDNA/: CRS.fasta  RSRS.fasta  Yoruba.fasta  mt_dna.py  rCRS.fasta
helix/naming/: converter.py  lookup_tables.py  orderer.py
helix/progress/: base_progress_calculator.py  file_io_monitor.py  file_size_monitor.py  process_io_monitor.py  progress_calculator.py  simple_worker.py  worker.py
helix/reference/: genome_metadata_loader.py  reference.py  repository.py  repository_manager.py
helix/renderers/: html_aligned_file_report.py  html_simple_table_report.py
helix/utility/: check_prerequisites.py  external.py  installer.py  regions.py  samtools.py  sequencers.py  shortcut.py  unit_prefix.py  updater.py
test/: create_dirs.py  fake_genome.fasta  genome_fixtures.py  test_buckets.py  test_compressor.py  test_decompressor.py  test_downloader.py  test_fasta.py  test_fasta_dictionary.py  test_ingestion.py  test_letter_run_collection.py  test_microarray_converter.py  test_number_convert.py  test_raw_file.py  test_reference.py  test_sequence.py  test_sequence_canonicalizer.py  test_unknown_bases_stats.py  utility.py
test/data/references/: fake_genome.fasta
tools/: fake_reference_genome_generator.py  import_scanner.py  last_file_export.py  reference_stats.py  to_base64.py
wgse/: VERSION.py  __init__.py  configuration.py  main.py  variant_caller.py
wgse/adapters/: alignment_map_file_info_adapter.py  alignment_stats_adapter.py  coverage_stats_adapter.py  header_adapter.py  index_stats_adapter.py  reference_adapter.py
wgse/alignment_map/: alignment_map_file.py  alignment_map_header.py  alignment_map_row.py  alignment_stats_calculator.py  depth_analyzer.py  index_stats_calculator.py  variant_caller.py
wgse/data/: alignment_map_file_info.py  alignment_stats.py  build.py  chromosome_name_type.py  file_type.py  gender.py  genome.py  microarray_converter.py  mitochondrial_model.py  mitochondrial_model_type.py  mitochondrial_name_type.py  read_type.py  reference.py  sequence.py  sequence_type.py  sorting.py  source.py  tabular_data.py
wgse/data/alignment_map/: alignment_map_file_info.py  alignment_map_header_metadata.py  alignment_map_header_program.py  alignment_map_header_read_group.py  alignment_map_header_sequence.py
wgse/experimental/: drag_drop_ui.qml  main.py
wgse/fasta/: fasta_letter_counter.py  fasta_stats_files.py  letter_run.py  letter_run_buckets.py  letter_run_collection.py  reference.py
wgse/fastq/: fastq_file.py
wgse/files/: bgzip.py  bgzip_compressor.py  decompressor.py  downloader.py  gzip.py  gzip_compressor.py
wgse/gui/: WGSE-NG.pyproject  __init__.py  alignment_statistics_dialog.py  extract.py  extract.ui  extract.ui.autosave  file_drop.ui  filedrop.py  filedrop.ui  form.ui  header.py  header.ui  header_dialog.py  index_statistics_dialog.py  main.py  microarray_format.py  microarray_selection.py  sequence_selection.py  table_dialog.py  ui_extract.py  ui_form.py
wgse/gui/extract/: extract_wizard.py  format_selection.py  microarray_selection.py  sequence_selection.py
wgse/metadata/: mtdna.json  ploidy.txt  references.json  references_template.json  sequencers.json  sources.json
wgse/metadata/bed_templates/: 19_y_mt.csv  38_y_mt.csv
wgse/microarray/: microarray_converter.py  microarray_line_formatter.py  raw_file.py
wgse/mtDNA/: Yoruba.fasta  mt_dna.py
wgse/naming/: converter.py  orderer.py
wgse/progress/: base_progress_calculator.py  process_io_monitor.py
wgse/reference/: repository_manager.py
wgse/reference_genome/: bgzip_compressor.py  decompressor.py  downloader.py  genome_metadata_loader.py  repository_manager.py
wgse/renderers/: csv_report.py  html_aligned_file_report.py  html_simple_table_report.py
wgse/sequence_naming/: converter.py  lookup_tables.py
wgse/utility/: bgzip_compressor.py  check_prerequisites.py  decompressor.py  external.py  file_type_checker.py  installer.py  mt_dna.py  process_io_monitor.py  regions.py  samtools.py  sequence_orderer.py  sequencers.py  shortcut.py  simple_worker.py  unit_prefix.py  updater.py
(+11 files in other folders)
