[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "WGSE-NG"
description = "Whole Genome Sequencing data manipulation tool"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Multiple", email = "unavailable@wgse-ng.com" }]
keywords = ["bioinformatics", "genetics", "wgs", "microarray", "science"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version"]
dependencies = [
    "setuptools",
    "pefile",
    "pycurl",
    "tqdm",
    "google-cloud-storage",
    "sphinx",
    "pytest",
    "pyinstaller",
    "PySide6",
    "jinja2",
    "vcf_parser",
    "WGSE-NG-3rd-party",
    "sentry-sdk",
    "debugpy",
    "psutil",
    "pydantic"
]

[project.urls]
homepage = "https://github.com/WGSE-NG/WGSE-NG"
Documentation = "https://wgse-ng.readthedocs.io/en/latest/"
Repository = "https://github.com/WGSE-NG/WGSE-NG"
Issues = "https://github.com/WGSE-NG/WGSE-NG/issues"
Changelog = "https://github.com/WGSE-NG/WGSE-NG/releases"

[tool.setuptools.packages.find]
include = ["wgse", "wgse.*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.exclude-package-data]
"wgse.metadata.microarray_templates.head" = ["*.*"]
"wgse.metadata.microarray_templates.body" = ["*.*"]

[project.scripts]
wgse_cli = "wgse.main:main"

[project.gui-scripts]
wgse = "wgse.main:main"

[tool.setuptools_scm]
version_file = "wgse/VERSION.py"

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers -p no:warnings --no-header --no-summary -x -q -s"
testpaths = [
    "test"
]
filterwarnings = [
    'ignore:DeprecationWarning',
]
