[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "DoubleHelix"
description = "Genomic data manipulation tool"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "chaplin89", email = "hello@doublehelix.app" }]
keywords = ["bioinformatics", "genetics", "wgs", "microarray", "science"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version"]
dependencies = [
    "setuptools",
    "pefile",
    "pycurl",
    "tqdm",
    "google-cloud-storage",
    "sphinx",
    "pytest",
    "pyinstaller",
    "PySide6",
    "jinja2",
    "vcf_parser",
    "doublehelix-external==v0.0.2; platform_system == \"Windows\"",
    "pypiwin32; platform_system == \"Windows\"",
    "sentry-sdk",
    "debugpy",
    "psutil",
    "pydantic",
    "certifi",
    "parse"
]

[project.urls]
Documentation = "https://doublehelix.app"
homepage = "https://github.com/DoubleHelixApp/DoubleHelix"
Repository = "https://github.com/DoubleHelixApp/DoubleHelix"
Issues = "https://github.com/DoubleHelixApp/DoubleHelix/issues"
Changelog = "https://github.com/DoubleHelixApp/DoubleHelix/releases"

[tool.setuptools.packages.find]
include = ["helix", "helix.*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.exclude-package-data]
"helix.metadata.microarray_templates.head" = ["*.*"]
"helix.metadata.microarray_templates.body" = ["*.*"]

[project.scripts]
helix_cli = "helix.main:main"

[project.gui-scripts]
helix = "helix.main:main"

[tool.setuptools_scm]
version_file = "helix/VERSION.py"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers -p no:warnings --no-header"
testpaths = [
    "test"
]
filterwarnings = [
    'ignore:DeprecationWarning',
]
